--- a/sft.yaml
+++ b/sft.yaml
@@ -29,8 +29,8 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 128
-lora_alpha: 128
+lora_rank: 64 # 128
+lora_alpha: 64 # 128
 #lora_dropout: 0.0
 #use_rslora: true
 use_dora: true
@@ -46,10 +46,10 @@ preprocessing_num_workers: 24
 ### train
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 4
+gradient_accumulation_steps: 2
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00005
-optim: adamw_torch # adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
+learning_rate: 0.0001 # 0.00005
+optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 #weight_decay: 0.001 # FIXME
 warmup_steps: 100
 bf16: true
@@ -57,10 +57,10 @@ bf16: true
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 1000
+save_steps: 500
 
 ### etc
-#flash_attn: fa2
+flash_attn: fa2
 gradient_checkpointing: true
 max_grad_norm: 1.0
 ddp_timeout: 180000000
