--- a/sft.yaml
+++ b/sft.yaml
@@ -29,9 +29,9 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 64 # 128
-lora_alpha: 64 # 128
-#lora_dropout: 0.0
+lora_rank: 64
+lora_alpha: 64
+lora_dropout: 0.1
 #use_rslora: true
 use_dora: true
 
@@ -40,7 +40,7 @@ dataset: x2
 template: llama3
 packing: true
 neat_packing: true
-cutoff_len: 16384 # 32768 # 8192 | 10240 | 16384 | 24576 | 32768 
+cutoff_len: 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
 preprocessing_num_workers: 24
 
 ### train
