--- a/sft.yaml
+++ b/sft.yaml
@@ -20,9 +20,9 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 64
-lora_alpha: 64
-lora_dropout: 0.1
+lora_rank: 96
+lora_alpha: 96
+lora_dropout: 0.05 # ??
 #use_rslora: true
 use_dora: true
 
@@ -32,16 +32,16 @@ template: llama3
 packing: true
 neat_packing: true
 cutoff_len: 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
-preprocessing_num_workers: 24
+preprocessing_num_workers: 48
 
 ### train
-num_train_epochs: 1.0
+num_train_epochs: 2.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
-lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0001 # 0.00005
+lr_scheduler_type: cosine # constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+learning_rate: 0.0002 # 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-#weight_decay: 0.001 # FIXME
+weight_decay: 0.005 # ??
 warmup_steps: 50
 bf16: true
 
