--- a/sft.mac.yaml
+++ b/sft.mac.yaml
@@ -1,5 +1,5 @@
 ### gotzmann
-enable_liger_kernel: true # works with FSDP
+#enable_liger_kernel: true # works with FSDP
 #use_unsloth: true # just for ONE card
 #use_unsloth_gc: true # use unsloth's gradient checkpointing
 #upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
@@ -11,8 +11,8 @@ enable_liger_kernel: true # works with FSDP
 
 ### model
 model_name_or_path: NousResearch/Meta-Llama-3.1-8B-Instruct
-quantization_bit: 4
-double_quantization: false
+#quantization_bit: 4
+#double_quantization: false
 
 ### method
 stage: sft
@@ -20,14 +20,14 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 64 # 128 # 96
+lora_rank: 32 # 128 # 96
 lora_alpha: 64 # 128 # 96
-lora_dropout: 0.1 # ??
+lora_dropout: 0.05 # ??
 #use_rslora: true
-use_dora: true
+#use_dora: true
 
 ### dataset
-dataset: x2 # mac # x2
+dataset: mac # x2
 template: llama3
 packing: true
 neat_packing: true
@@ -37,26 +37,26 @@ preprocessing_num_workers: 8
 ### train
 num_train_epochs: 1.0
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 1
-lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+gradient_accumulation_steps: 2
+lr_scheduler_type: cosine # constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.0001 # 0.00005
-optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.1 # ??
+optim: adamw_torch # adamw_torch | adamw_8bit | adamw_torch_fused
+#weight_decay: 0.005 # ??
 warmup_steps: 20
-bf16: true
-#fp16: true
+#bf16: true
+fp16: true
 
 ### output
-output_dir: /home/exported
+output_dir: /Users/me/exported # /home/exported
 logging_steps: 1
-save_steps: 500
+save_steps: 300
 
 ### etc
 flash_attn: fa2
 gradient_checkpointing: true
 max_grad_norm: 1.0
 ddp_timeout: 180000000
-ddp_find_unused_parameters: false
+ddp_find_unused_parameters: false # False for LoRA in DDP training
 overwrite_cache: true
 overwrite_output_dir: true
 
