--- a/sft.yaml
+++ b/sft.yaml
@@ -22,9 +22,9 @@ lora_target: all
 # additional_target: embed_tokens
 lora_rank: 64 # 128 # 96
 lora_alpha: 64 # 128 # 96
-lora_dropout: 0.1 # ??
-#use_rslora: true
-use_dora: true
+lora_dropout: 0.05 # ??
+use_rslora: true
+#use_dora: true
 
 ### dataset
 dataset: x2 # mac # x2
@@ -41,7 +41,7 @@ gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.0001 # 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.1 # ??
+weight_decay: 0.05 # ??
 warmup_steps: 20
 bf16: true
 #fp16: true
@@ -49,7 +49,7 @@ bf16: true
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 500
+save_steps: 300
 
 ### etc
 flash_attn: fa2
