--- a/sft.yaml
+++ b/sft.yaml
@@ -20,9 +20,9 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
-lora_rank: 64 # 128 # 96
-lora_alpha: 64 # 128 # 96
-lora_dropout: 0.05 # ??
+lora_rank: 128 # 96
+lora_alpha: 128 # 96
+#lora_dropout: 0.05 # ??
 use_rslora: true
 #use_dora: true
 
@@ -39,9 +39,9 @@ num_train_epochs: 1.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0001 # 0.00005
+learning_rate: 0.00005 # 0.0001 # 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.05 # ??
+#weight_decay: 0.05 # ??
 warmup_steps: 20
 bf16: true
 #fp16: true
