--- a/sft.yaml
+++ b/sft.yaml
@@ -21,8 +21,8 @@ finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens
 lora_rank: 128 # 96
-lora_alpha: 128 # 96
-#lora_dropout: 0.05 # ??
+lora_alpha: 64 # 96
+lora_dropout: 0.1 # ??
 use_rslora: true
 #use_dora: true
 
@@ -35,11 +35,11 @@ cutoff_len: 16384 # 16384 # 8192 | 10240 | 16384 | 24576 | 32768
 preprocessing_num_workers: 48
 
 ### train
-num_train_epochs: 1.0
+num_train_epochs: 2.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00005 # 0.0001 # 0.00005
+learning_rate: 0.0001 # 0.0001 # 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 #weight_decay: 0.05 # ??
 warmup_steps: 20
@@ -49,7 +49,7 @@ bf16: true
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 300
+save_steps: 500
 
 ### etc
 flash_attn: fa2
