--- a/sft.yaml
+++ b/sft.yaml
@@ -19,32 +19,31 @@ stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
-# additional_target: embed_tokens
+additional_target: embed_tokens
 lora_rank: 128 # 96
-lora_alpha: 64 # 96
-lora_dropout: 0.1 # ??
+lora_alpha: 96 # 96
+lora_dropout: 0.1
 use_rslora: true
 #use_dora: true
 
 ### dataset
-dataset: x2 # mac # x2
+dataset: x1 # mac
 template: llama3
 packing: true
 neat_packing: true
-cutoff_len: 16384 # 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
+cutoff_len: 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
 preprocessing_num_workers: 48
 
 ### train
-num_train_epochs: 2.0
+num_train_epochs: 3.0
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0001 # 0.0001 # 0.00005
+learning_rate: 0.00008 # 0.0001 # 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 #weight_decay: 0.05 # ??
 warmup_steps: 50
 bf16: true
-#fp16: true
 
 ### output
 output_dir: /home/exported
