--- a/sft.yaml
+++ b/sft.yaml
@@ -19,7 +19,7 @@ stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
-additional_target: embed_tokens
+# additional_target: embed_tokens
 lora_rank: 128 # 96
 lora_alpha: 96 # 96
 lora_dropout: 0.1
