--- a/sft.yaml
+++ b/sft.yaml
@@ -19,9 +19,9 @@ stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
-additional_target: embed_tokens # ,lm_head
-lora_rank: 128 # 96
-lora_alpha: 64 # 96
+# additional_target: embed_tokens
+lora_rank: 64
+lora_alpha: 64
 lora_dropout: 0.1
 use_rslora: true
 #use_dora: true
@@ -37,11 +37,11 @@ preprocessing_num_workers: 48
 ### train
 num_train_epochs: 3.0
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 1
+gradient_accumulation_steps: 2
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00008 # 0.0001 # 0.00005
+learning_rate: 0.0001
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-#weight_decay: 0.05 # ??
+#weight_decay: 0.1
 warmup_steps: 50
 bf16: true
 
@@ -80,3 +80,7 @@ overwrite_output_dir: true
 # all == q_proj,k_proj,v_proj,o_proj,gate_proj,up_proj,down_proj
 # additional_target: lm_head,embed_tokens
 # [ lm_head ] with [ liger_kernel ] RuntimeError: size mismatch, got input (1), mat (1x4096), vec (65667072)
+
+# Continued Pretraining with Unsloth
+# https://unsloth.ai/blog/contpretraining
+# embedding_learning_rate
