--- a/sft.yaml
+++ b/sft.yaml
@@ -19,10 +19,10 @@ stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
-# additional_target: embed_tokens
-lora_rank: 64
-lora_alpha: 64
-lora_dropout: 0.1
+additional_target: embed_tokens
+lora_rank: 96
+lora_alpha: 32
+lora_dropout: 0.05
 use_rslora: true
 #use_dora: true
 
@@ -35,20 +35,20 @@ cutoff_len: 16384 # 8192 | 10240 | 16384 | 24576 | 32768
 preprocessing_num_workers: 48
 
 ### train
-num_train_epochs: 3.0
+num_train_epochs: 4
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0001
+learning_rate: 0.0005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-#weight_decay: 0.1
-warmup_steps: 50
+weight_decay: 0.05
+warmup_steps: 100
 bf16: true
 
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 500
+save_steps: 750
 
 ### etc
 flash_attn: fa2
