--- a/sft.yaml
+++ b/sft.yaml
@@ -20,11 +20,11 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 additional_target: embed_tokens
-lora_rank: 96
-lora_alpha: 32
-lora_dropout: 0.05
-use_rslora: true
-#use_dora: true
+lora_rank: 64 # 32 # 96
+lora_alpha: 64 # 16
+lora_dropout: 0.1
+#use_rslora: true
+use_dora: true
 
 ### dataset
 dataset: x1 # mac
@@ -39,9 +39,9 @@ num_train_epochs: 4
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.0005
+learning_rate: 0.0001
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.05
+weight_decay: 0.1
 warmup_steps: 100
 bf16: true
 
