--- a/sft.yaml
+++ b/sft.yaml
@@ -20,14 +20,14 @@ do_train: true
 finetuning_type: lora
 lora_target: all
 additional_target: embed_tokens
-lora_rank: 96
-lora_alpha: 32
-lora_dropout: 0.1
-use_rslora: true
+lora_rank: 64
+lora_alpha: 64
+lora_dropout: 0.05
+#use_rslora: true
 #use_dora: true
 
 ### dataset
-dataset: x1 # mac
+dataset: x3 # mac
 template: llama3
 packing: true
 neat_packing: true
@@ -35,14 +35,14 @@ cutoff_len: 16384 # 8192 | 10240 | 16384 | 24576 | 32768
 preprocessing_num_workers: 48
 
 ### train
-num_train_epochs: 4
+num_train_epochs: 1
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
-lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00005
+lr_scheduler_type: cosine # constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+learning_rate: 0.0002
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.1
-warmup_steps: 100
+weight_decay: 0.05
+warmup_steps: 50
 bf16: true
 
 ### output
