--- a/sft.yaml
+++ b/sft.yaml
@@ -38,7 +38,7 @@ preprocessing_num_workers: 48
 num_train_epochs: 1
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
-lr_scheduler_type: cosine # constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.0001
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
 weight_decay: 0.01
@@ -48,7 +48,7 @@ bf16: true
 ### output
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 3000
+save_steps: 2000
 
 ### etc
 flash_attn: fa2
