--- a/sft.yaml
+++ b/sft.yaml
@@ -21,7 +21,7 @@ finetuning_type: lora
 lora_target: all
 additional_target: embed_tokens,lm_head
 lora_rank: 128
-lora_alpha: 32
+lora_alpha: 16
 lora_dropout: 0.1
 use_rslora: true
 #use_dora: true
@@ -32,16 +32,16 @@ template: llama3
 packing: true
 neat_packing: true
 cutoff_len: 8192 # 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
-preprocessing_num_workers: 112
+preprocessing_num_workers: 96 # 112
 
 ### train
 num_train_epochs: 4
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00008
+learning_rate: 0.0001
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.01
+weight_decay: 0.1
 warmup_steps: 100
 bf16: true
 
