--- a/sft.yaml
+++ b/sft.yaml
@@ -41,7 +41,7 @@ gradient_accumulation_steps: 1
 lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.00008
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.001
+# weight_decay: 0.001
 warmup_steps: 20
 bf16: true
 
