--- a/sft.yaml
+++ b/sft.yaml
@@ -1,20 +1,12 @@
-### gotzmann
 enable_liger_kernel: true # works with FSDP
-#use_unsloth: true # just for ONE card
-#use_unsloth_gc: true # use unsloth's gradient checkpointing
-#upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
-#upcast_lmhead_output: true
 
-### resume
 #ignore_data_skip: true
 #resume_from_checkpoint: /home/exported/checkpoint-4115
 
-### model
 model_name_or_path: NousResearch/Meta-Llama-3.1-8B-Instruct
 quantization_bit: 4
 double_quantization: false
 
-### method
 stage: sft
 do_train: true
 finetuning_type: lora
@@ -24,33 +16,29 @@ lora_rank: 64
 lora_alpha: 16
 lora_dropout: 0.1
 use_rslora: true
-#use_dora: true
 
-### dataset
-dataset: x1 # mac
+dataset: x1
 template: llama3
 packing: true
 neat_packing: true
-cutoff_len: 8192 # 16384 # 8192 | 10240 | 16384 | 24576 | 32768 
-preprocessing_num_workers: 64 # 112
+cutoff_len: 8192 # 8192 | 16384 | 24576 | 32768 
+preprocessing_num_workers: 64
 
-### train
 num_train_epochs: 3
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 1
-lr_scheduler_type: constant_with_warmup # cosine_with_min_lr # constant | constant_with_warmup | linear | cosine
+lr_scheduler_type: constant_with_warmup # constant | constant_with_warmup | linear | cosine
 learning_rate: 0.00006
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.1
+weight_decay: 0.02
 warmup_steps: 50
-bf16: true
 
-### output
 output_dir: /home/exported
 logging_steps: 1
 save_steps: 2000
 
 ### etc
+bf16: true
 flash_attn: fa2
 gradient_checkpointing: true
 max_grad_norm: 1.0
@@ -59,6 +47,7 @@ ddp_find_unused_parameters: false
 overwrite_cache: true
 overwrite_output_dir: true
 
+#use_dora: true
 # use_fast_tokenizer: false
 # loraplus_lr_ratio: 4.0
 # use_reentrant: true
@@ -84,3 +73,9 @@ overwrite_output_dir: true
 # Continued Pretraining with Unsloth
 # https://unsloth.ai/blog/contpretraining
 # embedding_learning_rate
+
+# Unsloth
+#use_unsloth: true # just for ONE card
+#use_unsloth_gc: true # use unsloth's gradient checkpointing
+#upcast_layernorm: true # FSDP: Must flatten tensors with uniform dtype
+#upcast_lmhead_output: true
