--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# vscode
+.vscode/
+
 # custom .gitignore
 ms_cache/
 hf_cache/
@@ -174,3 +177,4 @@ config/
 saves/
 output/
 wandb/
+generated_predictions.jsonl
