--- a/sft.yaml
+++ b/sft.yaml
@@ -30,9 +30,10 @@ num_train_epochs: 2
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
 lr_scheduler_type: constant_with_warmup # constant | constant_with_warmup | linear | cosine
-learning_rate: 0.00005
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-weight_decay: 0.001
+learning_rate: 0.00005
+# embedding_learning_rate: 1e-5
+weight_decay: 0.01
 warmup_steps: 50
 
 output_dir: /home/exported
