--- a/fsdp.yaml
+++ b/fsdp.yaml
@@ -21,6 +21,7 @@ fsdp_config:
 machine_rank: 0
 main_training_function: main
 mixed_precision: bf16
+# gradient_clipping: 0.5
 num_machines: 1
 num_processes: 8
 rdzv_backend: static
