--- a/sft.yaml
+++ b/sft.yaml
@@ -1,6 +1,6 @@
 enable_liger_kernel: true # works with FSDP
 use_reentrant_gc: true
-disable_shuffling: true
+disable_shuffling: false # true
 
 #ignore_data_skip: true
 #resume_from_checkpoint: /home/exported/checkpoint-4115
@@ -15,7 +15,7 @@ finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens,lm_head
 lora_rank: 64
-lora_alpha: 16
+lora_alpha: 64
 lora_dropout: 0.1
 use_rslora: true
 
@@ -31,21 +31,19 @@ per_device_train_batch_size: 1
 gradient_accumulation_steps: 2
 lr_scheduler_type: constant_with_warmup # constant | constant_with_warmup | linear | cosine
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-learning_rate: 0.00005
-# embedding_learning_rate: 2e-5
-weight_decay: 0.002
-warmup_steps: 30
+learning_rate: 0.00004
+# embedding_learning_rate: 1e-5
+weight_decay: 0.01
+warmup_steps: 50
 
 output_dir: /home/exported
 logging_steps: 1
-save_steps: 2000
+save_steps: 1000
 
-### etc
 bf16: true
 flash_attn: fa2
 gradient_checkpointing: true
 max_grad_norm: 0.5
-# gradient_clipping: 0.5
 ddp_timeout: 180000000
 ddp_find_unused_parameters: false
 overwrite_cache: true
