--- a/sft.yaml
+++ b/sft.yaml
@@ -1,6 +1,6 @@
 enable_liger_kernel: true # works with FSDP
 use_reentrant_gc: true
-disable_shuffling: false # true
+disable_shuffling: true
 
 #ignore_data_skip: true
 #resume_from_checkpoint: /home/exported/checkpoint-4115
@@ -15,7 +15,7 @@ finetuning_type: lora
 lora_target: all
 # additional_target: embed_tokens,lm_head
 lora_rank: 64
-lora_alpha: 64
+lora_alpha: 16
 lora_dropout: 0.1
 use_rslora: true
 
@@ -28,12 +28,12 @@ preprocessing_num_workers: 64
 
 num_train_epochs: 2
 per_device_train_batch_size: 1
-gradient_accumulation_steps: 2
+gradient_accumulation_steps: 4
 lr_scheduler_type: constant_with_warmup # constant | constant_with_warmup | linear | cosine
 optim: adamw_torch_fused # adamw_torch | adamw_8bit | adamw_torch_fused
-learning_rate: 0.00004
+learning_rate: 0.00005
 # embedding_learning_rate: 1e-5
-weight_decay: 0.01
+weight_decay: 0.05
 warmup_steps: 50
 
 output_dir: /home/exported
